--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Building.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="JsonSettings.cs" />
     <Compile Include="Test.cs" />
