--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bot.cs" />
     <Compile Include="SettingsManager.cs" />
+    <Compile Include="Timespans.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
