minor GUI changes

--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -48,7 +48,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>0399A9C392DCA8085F1360B98AB644C978776317</ManifestCertificateThumbprint>
