--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Building.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="Setting.cs" />
-    <Compile Include="Test.cs" />
+    <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bot.cs" />
     <Compile Include="SettingsManager.cs" />
