--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -99,7 +99,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskScheduler.cs" />
     <Compile Include="User.cs" />
