--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -88,7 +88,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Caching" />
-    <Reference Include="System.Security" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -98,14 +97,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Building.cs" />
-    <Compile Include="Room.cs" />
-    <Compile Include="Setting.cs" />
-    <Compile Include="Start.cs" />
+    <Compile Include="App\Building.cs" />
+    <Compile Include="App\Room.cs" />
+    <Compile Include="App\Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Bot.cs" />
-    <Compile Include="SettingsManager.cs" />
-    <Compile Include="Timespans.cs" />
+    <Compile Include="App\Bot.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -113,7 +109,6 @@
     <None Include="Properties\app.manifest" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="icon.ico" />
     <Content Include="KronoxScraperBot.csproj" />
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +122,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj">
+      <Project>{d439c889-2d27-4382-8517-c69e5db51fad}</Project>
+      <Name>Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
